Edit to contain recipe description

--- a/recipes/cookies-and-cream-brownies.html
+++ b/recipes/cookies-and-cream-brownies.html
@@ -6,5 +6,12 @@
 	</head>
 	<body>
 		<h1>Cookies & Cream Brownies</h1>
+		<img src="https://www.allrecipes.com/thmb/rqXkkOxlHHuZLhe8RMJLbmnRwt8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Cookies-and-Cream-Brownies-556ee556c7314fc9b68951286c13c90b.jpg" alt="Picture of the cookies and cream brownies">
+		<h2>
+			Description
+		</h2>
+		<p>
+			These rich, fudgy chocolate brownies are the perfect balance of soft and gooey on the inside, with a satisfyingly crisp and crunchy outer layer. The decadent chocolate flavor is elevated by a smooth and creamy topping, and the added crunch of crushed cookies takes this dessert to the next level. This indulgent treat is surprisingly easy to make, and is sure to satisfy any chocolate lover's cravings.
+		</p>
 	</body>
 </html>
