Add a section for Description, Ingredients, and Steps

--- a/recipes/cookies-and-cream-brownies.html
+++ b/recipes/cookies-and-cream-brownies.html
@@ -13,5 +13,69 @@
 		<p>
 			These rich, fudgy chocolate brownies are the perfect balance of soft and gooey on the inside, with a satisfyingly crisp and crunchy outer layer. The decadent chocolate flavor is elevated by a smooth and creamy topping, and the added crunch of crushed cookies takes this dessert to the next level. This indulgent treat is surprisingly easy to make, and is sure to satisfy any chocolate lover's cravings.
 		</p>
+		<h2>
+			Ingredients
+		</h2>
+		<ul>
+			<li>
+				1 ½ cups white sugar
+			</li>
+			<li>
+				¾ cup all-purpose flour
+			</li>
+			<li>
+				½ cup high-quality unsweetened cocoa powder
+			</li>
+			<li>
+				½ teaspoon salt
+			</li>
+			<li>
+				¼ teaspoon baking powder
+			</li>
+			<li>
+				¾ cup unsalted butter (melted)
+			</li>
+			<li>
+				3 large eggs
+			</li>
+			<li>
+				1 teaspoon vanilla extract
+			</li>
+			<li>
+				32 chocolate sandwich cookies (such as Oreo®), divided
+			</li>
+			<li>
+				1 (8 ounce) container frozen whipped topping (such as Cool Whip®) (thawed)
+			</li>
+		</ul>
+		<h2>
+			Steps
+		</h2>
+		<ol>
+			<li>				
+				Preheat the oven to 350 degrees F and grease a 9-inch square pan.
+			</li>
+			<li>				
+				Mix together sugar, flour, cocoa powder, salt, and baking powder.
+			</li>
+			<li>				
+				In a separate bowl, whisk together butter, eggs, and vanilla. Add the butter mixture to the flour mixture and mix until well combined.
+			</li>
+			<li>				
+				Pour half of the batter into the prepared pan and smooth it out with a spatula. Add 16 Oreo cookies in an even layer on top of the batter, then spread the remaining half of the batter over the cookies.
+			</li>
+			<li>				
+				Bake the brownies until the edges are brown and the center is set, 30 to 35 minutes.
+			</li>
+			<li>				
+				Remove the pan from the oven and set it on a wire rack to cool. Let the brownies cool completely, at least 30 minutes.
+			</li>
+			<li>				
+				Crush 12 of the remaining Oreo cookies. In a bowl, mix together the whipped topping and the crushed cookies. Spread the mixture over the top of the brownies. Crush the remaining 4 cookies and sprinkle them over the whipped cream mixture.
+			</li>
+			<li>				
+				Keep the brownies refrigerated until you are ready to slice and serve them.
+			</li>
+		</ol>
 	</body>
 </html>
