Edit to include links to Cheesecake stuffed strawberries and lemon cookies recipe

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 	</head>
 	<body>
 		<h1>Odin Recipes</h1>
-		<a href="recipes/cookies-and-cream-brownies.html">Cookies & Cream Brownies</a>
+		<ul>
+			<li>
+				<a href="recipes/cookies-and-cream-brownies.html">Cookies & Cream Brownies</a>
+			</li>
+			<li>
+				<a href="recipes/cheesecake-stuffed-strawberries.html">Cheesecake Stuffed Strawberries</a>
+			</li>
+			<li>
+				<a href="recipes/lemon-cookies.html">Lemon Cookies</a>
+			</li>
+		</ul>
 	</body>
 </html>
